--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
@@ -25,7 +26,7 @@
 		<restlet.version>2.3.7</restlet.version> <!-- Restlet version -->
 		<resteasy.version>2.3.5.Final</resteasy.version> <!-- RESTEasy version -->
 		<jackson.version>2.8.2</jackson.version> <!-- Jackson version -->
-		<google.client.version>1.20.0</google.client.version> <!-- Google HTTP Client version -->
+		<google.client.version>1.23.0</google.client.version> <!-- Google HTTP Client version -->
 		<junit.version>4.12</junit.version> <!-- JUnit version -->
 		<mockito.version>2.0.2-beta</mockito.version> <!-- Mockito version -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -135,6 +136,12 @@
 			<version>${google.client.version}</version>
 		</dependency>
 
+		<!-- Google API Client Library -->
+		<dependency>
+			<groupId>com.google.api-client</groupId>
+			<artifactId>google-api-client</artifactId>
+			<version>${google.client.version}</version>
+		</dependency>
 
 	</dependencies>
 
@@ -178,7 +185,8 @@
 							<target>
 								<property name="target.webapp.dir"
 									value="${project.build.directory}/${project.build.finalName}" />
-								<property name="src.webapp.dir" value="${basedir}/src/main/webapp" />
+								<property name="src.webapp.dir"
+									value="${basedir}/src/main/webapp" />
 
 								<sync verbose="true" todir="${target.webapp.dir}"
 									includeEmptyDirs="true">
