--- a/pom.xml
+++ b/pom.xml
@@ -157,6 +157,14 @@
 			<version>v3-rev260-1.23.0</version>
 		</dependency>
 
+    <!-- Twitter4j -->
+		<dependency>
+			<groupId>org.twitter4j</groupId>
+			<artifactId>twitter4j-core</artifactId>
+			<version>[4.0,)</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
